--- a/app/assets/scss/global.css
+++ b/app/assets/scss/global.css
@@ -1257,10 +1257,63 @@
       border-bottom-left-radius: 0;
       border: none; }
 
-.fees-info-main {
-  border: 1px solid red; }
-  .fees-info-main div.card-header {
-    color: blue; }
+.fees-info-main div.col-md-4 {
+  padding-bottom: 30px; }
+.fees-info-main div.card-header {
+  font-size: 16px;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 700;
+  color: #ff4e31;
+  position: relative; }
+.fees-info-main td:nth-child(2) {
+  padding-left: 30px; }
+  .fees-info-main td:nth-child(2) span {
+    font-weight: 700;
+    color: #002749; }
+.fees-info-main i.fas.fa-info.pr-2 {
+  position: absolute;
+  right: 5px;
+  top: 17px; }
+.fees-info-main i.fas.fa-info.pr-2::before {
+  background: #fff;
+  border-radius: 70px;
+  height: 140px;
+  width: 140px; }
+.fees-info-main .fees-details-dialog {
+  position: absolute;
+  visibility: hidden;
+  bottom: 135px;
+  right: -315px;
+  background: #fff;
+  padding: 20px;
+  text-align: left;
+  width: 325px;
+  border-radius: 5px;
+  -webkit-box-shadow: 1px -1px 18px 1px rgba(0, 0, 0, 0.17);
+  -moz-box-shadow: 1px -1px 18px 1px rgba(0, 0, 0, 0.17);
+  box-shadow: 1px -1px 18px 1px rgba(0, 0, 0, 0.17); }
+  .fees-info-main .fees-details-dialog h3 {
+    font-weight: 700;
+    color: #ff4e31;
+    font-size: 16px; }
+.fees-info-main .fees-info-subheader {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  padding-bottom: 20px; }
+  .fees-info-main .fees-info-subheader:first-child {
+    font-weight: 700;
+    color: #002749; }
+    .fees-info-main .fees-info-subheader:first-child span {
+      color: #ff4e31; }
+  .fees-info-main .fees-info-subheader select#class-search-dropdown.form-control {
+    width: 250px !important;
+    display: flex !important; }
+  .fees-info-main .fees-info-subheader div.col-lg-6.search-dropdown {
+    display: flex !important;
+    justify-content: flex-end;
+    flex-direction: row;
+    flex-wrap: wrap; }
 
 .footer-wrapper {
   position: relative;
