--- a/app/assets/scss/_colorScheme.scss
+++ b/app/assets/scss/_colorScheme.scss
@@ -13,4 +13,5 @@ $darkTextColor:#454545;
 $tableHeaderTransparent: #ffedea;
 $colorPresent: #1dbc60;
 $colorAbsent: #ff0000;
-$colorOnTime: #002749;
+$colorDelayTime: #002749;
+$colorOnLeave: #4e31ff;
