--- a/app/assets/scss/global.css
+++ b/app/assets/scss/global.css
@@ -1171,11 +1171,24 @@
     font-size: 18px;
     line-height: 1.8; }
 
+.font-20 {
+  font-size: 20px !important; }
+
+.font-24 {
+  font-size: 24px !important; }
+
+.vertical-border {
+  background-color: #e5e5e5;
+  height: 60px;
+  width: 1px;
+  margin: 0 auto; }
+
 .form .form-inline .form-group {
   position: relative;
   display: flex;
   width: 100%;
-  margin-bottom: 8px; }
+  margin-bottom: 8px;
+  /* For IE10 */ }
   .form .form-inline .form-group .form-control {
     background-color: #f2f2f2;
     color: #818181;
@@ -1191,10 +1204,17 @@
     .form .form-inline .form-group button.all-border-radious {
       border-top-left-radius: .25rem;
       border-bottom-left-radius: .25rem; }
+      .form .form-inline .form-group button.all-border-radious.download-btn-dark {
+        background-color: #033b6d !important; }
+        .form .form-inline .form-group button.all-border-radious.download-btn-dark:hover {
+          background-color: #f23010 !important; }
   .form .form-inline .form-group.custom-dropdown {
     position: relative;
     border-radius: .25rem;
     overflow: hidden; }
+    .form .form-inline .form-group.custom-dropdown.with-search-btn::before {
+      content: unset;
+      width: unset; }
     .form .form-inline .form-group.custom-dropdown::after {
       content: '>';
       font: 30px "Consolas", monospace;
@@ -1216,16 +1236,15 @@
       text-align: center;
       padding: 0px 0px 30px 0;
       margin: 4px 0px 0px 10px; }
-    .form .form-inline .form-group.custom-dropdown::before {
-      content: '';
-      background-color: #f2f2f2;
-      width: 28px;
-      height: 38px;
-      top: 0;
-      right: 0;
-      position: absolute; }
     .form .form-inline .form-group.custom-dropdown .form-control {
       padding-left: 50px; }
+  .form .form-inline .form-group select {
+    /* for Firefox */
+    -moz-appearance: none;
+    /* for Chrome */
+    -webkit-appearance: none; }
+  .form .form-inline .form-group select::-ms-expand {
+    display: none; }
 .form .form-inline .full-width {
   border: none;
   width: 100%; }
@@ -1393,6 +1412,18 @@
         border: none;
         float: right; }
 
+.welcome-speech::before {
+  content: unset; }
+.welcome-speech .speech-slider-wrapper {
+  background-color: #f2f2f2;
+  box-shadow: unset; }
+  .welcome-speech .speech-slider-wrapper .slider-item .grid-list-wrapper .grid-image {
+    float: left;
+    margin-right: 30px;
+    margin-bottom: 30px; }
+    .welcome-speech .speech-slider-wrapper .slider-item .grid-list-wrapper .grid-image img {
+      max-width: 230px; }
+
 /*.........Student LIST INSIDE END...........*/
 .custom-table .section-wise-attendance-table.center {
   text-align: center; }
@@ -1403,6 +1434,7 @@
   border: none;
   border-bottom: 5px solid #fff; }
   .custom-table .section-wise-attendance-table thead tr th {
+    text-align: center;
     border: none;
     color: #fff;
     font-size: 20px;
@@ -1428,7 +1460,7 @@
     .custom-table .section-wise-attendance-table tbody tr td:nth-child(2) {
       background-color: #fff9f9; }
     .custom-table .section-wise-attendance-table tbody tr td:last-child::after {
-      background-color: gray;
+      background-color: '';
       position: absolute;
       content: '';
       width: 6px;
@@ -1508,6 +1540,7 @@
   border: none;
   border-bottom: 5px solid #fff; }
   .custom-table .student-wise-attendance-table thead tr th {
+    text-align: center;
     border: none;
     color: #fff;
     font-size: 20px;
@@ -1533,7 +1566,7 @@
     .custom-table .student-wise-attendance-table tbody tr td:nth-child(2) {
       background-color: #fff9f9; }
     .custom-table .student-wise-attendance-table tbody tr td:last-child::after {
-      background-color: gray;
+      background-color: '';
       position: absolute;
       content: '';
       width: 6px;
@@ -1609,6 +1642,21 @@
   margin: 0;
   align-items: center;
   padding: 30px 0; }
+  .attendance-body-header .attendance-body-header-inside .top-position {
+    background-color: #f2f2f2;
+    height: 152px;
+    margin: -30px 0;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    text-align: center; }
+    .attendance-body-header .attendance-body-header-inside .top-position div h2 {
+      font-size: 50px;
+      font-weight: 700;
+      margin-bottom: 0; }
+    .attendance-body-header .attendance-body-header-inside .top-position div p {
+      font-size: 22px;
+      font-weight: 600; }
   .attendance-body-header .attendance-body-header-inside .legend-with-percent {
     margin-left: 20px;
     display: flex;
@@ -1686,6 +1734,21 @@
   margin: 0;
   align-items: center;
   padding: 30px 0; }
+  .result-body-header .result-body-header-inside .top-position {
+    background-color: #f2f2f2;
+    height: 152px;
+    margin: -30px 0;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    text-align: center; }
+    .result-body-header .result-body-header-inside .top-position div h2 {
+      font-size: 50px;
+      font-weight: 700;
+      margin-bottom: 0; }
+    .result-body-header .result-body-header-inside .top-position div p {
+      font-size: 22px;
+      font-weight: 600; }
   .result-body-header .result-body-header-inside .legend-with-percent {
     margin-left: 20px;
     display: flex;
