--- a/app/assets/scss/pageBodyContainer_kabir.scss
+++ b/app/assets/scss/pageBodyContainer_kabir.scss
@@ -1,3 +1,27 @@
+.font-20{
+    font-size: 20px !important;
+}
+
+.font-24{
+    font-size: 24px !important;
+}
+
+.vertical-border{
+    background-color: #e5e5e5;
+    height: 60px;
+    width: 1px;
+    margin: 0 auto;
+    
+    // &::before {
+    //     position: absolute;
+    //     content: "";
+    //     width: 1px;
+    //     height: 100%;
+    //     background-color: #f1f1f1;
+    //     left: 0;
+    // }
+}
+
 @mixin font-selector($fontName){
     font-family: $fontName, sans-serif !important;
 }
@@ -23,6 +47,7 @@
                     border-bottom: 5px solid #fff;
 
                     th{
+                        text-align: center;
                         border: none;
                         color: $colorWhite;
                         font-size: 20px;
@@ -64,7 +89,7 @@
                         }
 
                         &:last-child::after{
-                            background-color: gray;
+                            background-color: '';
                             position: absolute;
                             content: '';
                             width: 6px;
@@ -216,6 +241,29 @@
             align-items: center;
             padding: 30px 0;
 
+            .top-position{
+                background-color: #f2f2f2;
+                height: 152px;
+                margin: -30px 0;
+                display: flex;
+            justify-content: space-around;
+            align-items: center;
+            text-align: center;
+
+                div{
+                    h2{
+                        font-size: 50px;
+                        font-weight: 700;
+                        margin-bottom: 0;
+                    }
+
+                    p{
+                        font-size: 22px;
+                        font-weight: 600;
+                    }
+                }
+            }
+
             .legend-with-percent{
                 margin-left: 20px;
                 display: flex;
@@ -347,6 +395,14 @@
                     letter-spacing: 1px;
                 }
             }
+
+            .vertical-border{
+                // border-right: 1px solid red;
+                // background-color: #e5e5e5;
+                // height: 60px;
+                // width: 1px;
+                // margin: 0 auto;
+            }
         }
     }
 
@@ -392,6 +448,14 @@
                 &.all-border-radious{
                     border-top-left-radius: .25rem;
                     border-bottom-left-radius: .25rem;
+
+                    &.download-btn-dark{
+                        background-color: $primaryColorLight !important;
+
+                        &:hover{
+                            background-color: $orangeColorDark !important;
+                        }
+                    }
                 }
             }
 
@@ -399,6 +463,13 @@
                 position: relative;
                 border-radius: .25rem;
                 overflow: hidden;
+
+                &.with-search-btn{
+                    &::before {
+                        content: unset;
+                        width: unset;
+                    }
+                }
                 
                 &::after {
                     content: '>';
@@ -422,19 +493,31 @@
                     padding: 0px 0px 30px 0;
                     margin: 4px 0px 0px 10px;
                 }
-                &::before {
-                    content: '';
-                    background-color: #f2f2f2;
-                    width: 28px;
-                    height: 38px;
-                    top: 0;
-                    right: 0;
-                    position: absolute;
-                }
+                // &::before {
+                //     content: '';
+                //     background-color: #f2f2f2;
+                //     width: 28px;
+                //     height: 38px;
+                //     top: 0;
+                //     right: 0;
+                //     position: absolute;
+                // }
 
                 .form-control{
                     padding-left: 50px;
                 }
+            }
+
+            select {
+                /* for Firefox */
+                -moz-appearance: none;
+                /* for Chrome */
+                -webkit-appearance: none;
+            }
+              
+              /* For IE10 */
+            select::-ms-expand {
+                display: none;
             }
         }
 
@@ -730,13 +813,38 @@
                 border: none;
                 float: right;
             }
-            
-
         }
     }
-    
-    
-    
+}
+
+.welcome-speech{
+    &::before {
+        content: unset;
+    }
+
+    .speech-slider-wrapper{
+        background-color: #f2f2f2;
+        box-shadow: unset;
+
+        .slider-item{
+            .grid-list-wrapper{
+                .grid-image{
+                    float: left;
+                    margin-right: 30px;
+                    margin-bottom: 30px;
+
+                    img{
+                        max-width: 230px;
+                    }
+
+                    .grid-social{
+
+                    }
+
+                }
+            }
+        }
+    }
 }
 
 /*.........Student LIST INSIDE END...........*/ 
