seat info design done

--- a/app/assets/scss/global.scss
+++ b/app/assets/scss/global.scss
@@ -6,6 +6,7 @@
 @import 'contentPage.scss';
 @import 'pageBodyContainer_kabir.scss';
 @import 'feesInfo.scss';
+@import 'seatInfo.scss';
 @import 'footer.scss';
 @import 'sobhan.scss';
 
