--- a/app/assets/scss/global.css
+++ b/app/assets/scss/global.css
@@ -1307,6 +1307,12 @@
 .font-24 {
   font-size: 24px !important; }
 
+.error-message {
+  font-size: 11px;
+  font-weight: 400;
+  letter-spacing: .70px;
+  color: red; }
+
 .vertical-border {
   background-color: #e5e5e5;
   height: 60px;
