--- a/app/assets/scss/pageBodyContainer_kabir.scss
+++ b/app/assets/scss/pageBodyContainer_kabir.scss
@@ -6,6 +6,13 @@
     font-size: 24px !important;
 }
 
+.error-message{
+    font-size: 11px;
+    font-weight: 400;
+    letter-spacing: .70px;
+    color: red;
+}
+
 .vertical-border{
     background-color: #e5e5e5;
     height: 60px;
