--- a/app/assets/scss/pageBodyContainer_kabir.scss
+++ b/app/assets/scss/pageBodyContainer_kabir.scss
@@ -17,7 +17,7 @@
     background-color: #e5e5e5;
     height: 60px;
     width: 1px;
-    margin: 0 auto;
+    // margin: 0 auto;
     
     // &::before {
     //     position: absolute;
