--- a/app/assets/scss/admin/adminGlobal.css
+++ b/app/assets/scss/admin/adminGlobal.css
@@ -1,3 +1,6 @@
+.adminSideBar-wrapper a {
+  color: black;
+  text-decoration: none; }
 .adminSideBar-wrapper .MuiPaper-root {
   width: 240px !important; }
 .adminSideBar-wrapper .logo-wrapper {
@@ -14,7 +17,7 @@
     width: calc(100% - 240px) !important;
     margin-left: 240px; }
     .appTopBarWrapper .MuiToolbar-root {
-      justify-content: space-between; }
+      justify-content: flex-end; }
 
   .manContentWrapper {
     margin-left: 240px;
