--- a/app/assets/scss/admin/adminGlobal.css
+++ b/app/assets/scss/admin/adminGlobal.css
@@ -8,8 +8,7 @@
   font-weight: 600;
   padding: 15px 16px; }
 
-.manContentWrapper {
-  padding: 15px;
+.mainContentWrapper {
   margin-top: 65px; }
 
 @media screen and (min-width: 767px) {
@@ -19,8 +18,7 @@
     .appTopBarWrapper .MuiToolbar-root {
       justify-content: flex-end; }
 
-  .manContentWrapper {
-    margin-left: 240px;
-    padding: 15px; } }
+  .mainContentWrapper {
+    margin-left: 240px; } }
 
 /*# sourceMappingURL=adminGlobal.css.map */
