--- a/app/assets/scss/admin/adminPrivateLayout.scss
+++ b/app/assets/scss/admin/adminPrivateLayout.scss
@@ -12,8 +12,7 @@
         padding: 15px 16px;
     }
 }
-.manContentWrapper {
-    padding: 15px;
+.mainContentWrapper {
     margin-top: 65px;
 }
 @media screen and (min-width:767px){
@@ -24,8 +23,7 @@
             justify-content: flex-end;
         }
     }
-    .manContentWrapper {
+    .mainContentWrapper {
         margin-left: 240px;
-        padding: 15px;
     }
 }
