--- a/app/assets/scss/admin/adminPrivateLayout.scss
+++ b/app/assets/scss/admin/adminPrivateLayout.scss
@@ -14,6 +14,7 @@
 }
 .mainContentWrapper {
     margin-top: 65px;
+    padding: 15px;
 }
 @media screen and (min-width:767px){
     .appTopBarWrapper{
