--- a/app/assets/scss/pageBodyContainer_kabir.scss
+++ b/app/assets/scss/pageBodyContainer_kabir.scss
@@ -442,7 +442,7 @@
             position: relative;
             display: flex;
             width: 100%;
-            margin-bottom: 8px;
+            margin-bottom: 8px !important;
 
             // &.custom-input-text, &.custom-dropdown{
             //     margin: 0 0 0px 0;
