homepage, speech info info

--- a/app/assets/scss/global.scss
+++ b/app/assets/scss/global.scss
@@ -9,6 +9,7 @@
 @import 'seatInfo.scss';
 @import 'footer.scss';
 @import 'sobhan.scss';
+@import '_event_calendar.scss';
 
 *{
     font-family: 'Montserrat', sans-serif;
