--- a/app/assets/scss/contentPage.scss
+++ b/app/assets/scss/contentPage.scss
@@ -1064,7 +1064,7 @@
                     position: relative;
                     text-decoration: none;
                 }
-                .phone{
+                .phone, .email, .facebook, .linkedin{
                     &:before{
                         content: "";
                         position: absolute;
@@ -1078,7 +1078,7 @@
                         opacity: 0;
                     }
                     &:after{
-                        content: attr(phoneNumber);
+                        // content: attr(phone);
                         position: absolute;
                         top: 50px;
                         left: -45px;
@@ -1090,7 +1090,9 @@
                 }
                 a:hover{
                     background-color: $orangeColor;
-                    &.phone{
+                    z-index: 1;
+
+                    &.phone, &.email, &.facebook, &.linkedin {
                         &:before{
                             opacity: 1;
                         }
