--- a/app/assets/scss/global.css
+++ b/app/assets/scss/global.css
@@ -1060,7 +1060,7 @@
       color: #fff;
       position: relative;
       text-decoration: none; }
-    .grid-list-wrapper .grid-social ul li .phone:before {
+    .grid-list-wrapper .grid-social ul li .phone:before, .grid-list-wrapper .grid-social ul li .email:before, .grid-list-wrapper .grid-social ul li .facebook:before, .grid-list-wrapper .grid-social ul li .linkedin:before {
       content: "";
       position: absolute;
       top: 45px;
@@ -1071,8 +1071,7 @@
       width: 10px;
       transform: rotate(45deg);
       opacity: 0; }
-    .grid-list-wrapper .grid-social ul li .phone:after {
-      content: attr(phoneNumber);
+    .grid-list-wrapper .grid-social ul li .phone:after, .grid-list-wrapper .grid-social ul li .email:after, .grid-list-wrapper .grid-social ul li .facebook:after, .grid-list-wrapper .grid-social ul li .linkedin:after {
       position: absolute;
       top: 50px;
       left: -45px;
@@ -1081,10 +1080,11 @@
       border-radius: 5px;
       opacity: 0; }
     .grid-list-wrapper .grid-social ul li a:hover {
-      background-color: #ff4e31; }
-      .grid-list-wrapper .grid-social ul li a:hover.phone:before {
+      background-color: #ff4e31;
+      z-index: 1; }
+      .grid-list-wrapper .grid-social ul li a:hover.phone:before, .grid-list-wrapper .grid-social ul li a:hover.email:before, .grid-list-wrapper .grid-social ul li a:hover.facebook:before, .grid-list-wrapper .grid-social ul li a:hover.linkedin:before {
         opacity: 1; }
-      .grid-list-wrapper .grid-social ul li a:hover.phone:after {
+      .grid-list-wrapper .grid-social ul li a:hover.phone:after, .grid-list-wrapper .grid-social ul li a:hover.email:after, .grid-list-wrapper .grid-social ul li a:hover.facebook:after, .grid-list-wrapper .grid-social ul li a:hover.linkedin:after {
         opacity: 1; }
   .grid-list-wrapper:hover {
     -webkit-box-shadow: 0px 4px 15px 3px rgba(189, 189, 189, 0.5);
@@ -1564,6 +1564,14 @@
     margin-bottom: 30px; }
     .welcome-speech .speech-slider-wrapper .slider-item .grid-list-wrapper .grid-image img {
       max-width: 230px; }
+    .welcome-speech .speech-slider-wrapper .slider-item .grid-list-wrapper .grid-image .grid-social ul li .phone:after {
+      content: attr(phone); }
+    .welcome-speech .speech-slider-wrapper .slider-item .grid-list-wrapper .grid-image .grid-social ul li .email:after {
+      content: attr(email); }
+    .welcome-speech .speech-slider-wrapper .slider-item .grid-list-wrapper .grid-image .grid-social ul li .facebook:after {
+      content: attr(facebook); }
+    .welcome-speech .speech-slider-wrapper .slider-item .grid-list-wrapper .grid-image .grid-social ul li .linkedin:after {
+      content: attr(linkedin); }
 
 /*.........Student LIST INSIDE END...........*/
 .custom-table .section-wise-attendance-table.center {
@@ -2248,6 +2256,34 @@
   border: 1px solid #b2bec8; }
   .notice-wrapper p {
     font-size: 18px; }
+
+.rbc-calendar .rbc-toolbar .rbc-btn-group button {
+  font-size: 12px; }
+.rbc-calendar .rbc-toolbar .rbc-toolbar-label {
+  font-weight: 700; }
+.rbc-calendar .rbc-month-view .rbc-month-header, .rbc-calendar .rbc-agenda-view .rbc-month-header {
+  background-color: #697CAB !important;
+  padding: 10px 0px;
+  border-radius: 0px;
+  border: none;
+  text-align: left;
+  font-size: 16px;
+  font-weight: 500;
+  color: #ffffff; }
+  .rbc-calendar .rbc-month-view .rbc-month-header .rbc-header, .rbc-calendar .rbc-agenda-view .rbc-month-header .rbc-header {
+    border-bottom: unset; }
+.rbc-calendar .rbc-month-view .rbc-month-row, .rbc-calendar .rbc-agenda-view .rbc-month-row {
+  overflow: unset; }
+.rbc-calendar .rbc-month-view .rbc-agenda-table > thead > tr > th, .rbc-calendar .rbc-agenda-view .rbc-agenda-table > thead > tr > th {
+  background-color: #697CAB !important;
+  padding: 10px 12px;
+  border-radius: 0px;
+  text-align: left;
+  font-size: 16px;
+  font-weight: 500;
+  color: #ffffff; }
+  .rbc-calendar .rbc-month-view .rbc-agenda-table > thead > tr > th .rbc-header, .rbc-calendar .rbc-agenda-view .rbc-agenda-table > thead > tr > th .rbc-header {
+    border-bottom: unset; }
 
 * {
   font-family: 'Montserrat', sans-serif; }
