--- a/app/assets/scss/sobhan.scss
+++ b/app/assets/scss/sobhan.scss
@@ -1,30 +1,56 @@
-.p-t-10{
-    padding-top : 10px;
+.p-t-10 {
+  padding-top: 10px;
 }
 
 .p-t-20 {
-    padding-top: 20px;
-  }
-
-  .all-notice-bg{
-    padding: 30px;
-    background-color: $grayColorLight;
-  }
-  .m-b-20{
-      margin-bottom: 20px;
-  }
-
-.all-notice-wrapper{
-    padding-bottom: 0;
-    background-color: $grayColorLight;
+  padding-top: 20px;
 }
 
-.notice-wrapper{
-    background-color: $colorWhite;
-    padding: 15px;
-    border: 1px solid $grayColor;
-
-    p{
-        font-size: 18px;
-    }
+.all-notice-bg {
+  padding: 30px;
+  background-color: $grayColorLight;
 }
+.m-b-20 {
+  margin-bottom: 20px;
+}
+
+.all-notice-wrapper {
+  padding-bottom: 0;
+  background-color: $grayColorLight;
+}
+
+.notice-wrapper {
+  background-color: $colorWhite;
+  padding: 15px;
+  border: 1px solid $grayColor;
+
+  p {
+    font-size: 18px;
+  }
+}
+
+#scrollTopBtn {
+  height: 56px;
+  width: 56px;
+  position: fixed;
+  bottom: 25px;
+  right: 30px;
+  z-index: 3;
+  font-size: 18px;
+  border: none;
+  outline: none;
+  background-color: #ff4e31;
+  color: white;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 50%;
+  transition: all 300ms ease-in-out 0s;
+
+  &:hover {
+    background-color: #033b6d;
+  }
+}
+
+// #scrollTopBtn:hover {
+//   background-color: #555;
+// }
