--- a/app/assets/scss/contentPage.scss
+++ b/app/assets/scss/contentPage.scss
@@ -350,6 +350,10 @@
     &:hover{
         .icon-wrapper{
             .icon-title{
+
+                a {
+                 text-decoration: none;
+                }
                 h5{
                     color: $orangeColor;
                 }
