update home notice animation

--- a/app/assets/scss/contentPage.scss
+++ b/app/assets/scss/contentPage.scss
@@ -812,6 +812,11 @@
                     width: 165px;
                     height: 215px;
                 }
+
+                .gallery-img{
+                    max-height: 190px;
+                    object-fit: cover;
+                }
             }
             &::after{
                 position: absolute;
