--- a/app/assets/scss/footer.scss
+++ b/app/assets/scss/footer.scss
@@ -27,7 +27,7 @@
             margin-bottom: 15px;
         }
         .title{
-            font-size: 18px;
+            font-size: 16px;
             font-weight: 700;
             margin-bottom: 10px;
             display: block;
@@ -52,7 +52,9 @@
                     background: $colorBlack;
                     position: absolute;
                     left: 0px;
-                    top: 65px;
+                    top: 0;
+                    bottom: 0;
+                    margin: auto 0;
                 }
                 &::after{
                     content: "";
@@ -61,7 +63,9 @@
                     background: $colorBlack;
                     position: absolute;
                     right: 0px;
-                    top: 65px;
+                    top: 0;
+                    bottom: 0;
+                    margin: auto 0;
                 }
             }
         }
