--- a/app/assets/scss/global.css
+++ b/app/assets/scss/global.css
@@ -2351,6 +2351,9 @@
 * {
   font-family: 'Montserrat', sans-serif; }
 
+.container {
+  max-width: 1300px; }
+
 @media (min-width: 576px) {
   .modal-dialog {
     max-width: 900px; } }
